k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: lmwprac
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: lmwcode/fitness_locator-webserver:V1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        readinessProbe:
          httpGet:
            path: /
            port: 5050
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 120
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 5050
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 120
          failureThreshold: 3
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: configmap
